[tool.poetry]
name = "sa-records-retriever"
version = "0.1.0"
description = "Python scripts to retrieve and somewhat process XML metadata records to be processed offline by the Semantic Analyser"
authors = ["Nicholas Car <nick@kurrawong.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
owslib = "^0.32.0"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
